syntax = "proto3";
package routerprotocol.routerchain.attestation;

option go_package = "github.com/router-protocol/router-chain/x/attestation/types";

message BridgeValidator {
  
  uint64 power = 1; 
  string ethereumAddress = 2; 
}
