syntax = "proto3";
package routerprotocol.routerchain.outbound;

option go_package = "github.com/router-protocol/router-chain/x/outbound/types";

message ContractCall {
  
  bytes destinationContractAddress = 1; 
  bytes payload = 2; 
}
